updated media queries

--- a/port.css
+++ b/port.css
@@ -91,3 +91,30 @@ div h1 span {
     position: relative;
     overflow: hidden;
 }
+
+/* .test1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+
+@media (max-width: 1200px) {
+    /* … */
+
+    .test1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+  }
+@media (max-width: 1025px) {
+    /* … */
+
+    .test2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+  }
