--- a/port.css
+++ b/port.css
@@ -33,6 +33,8 @@ div h1 span {
 }
 
 .picBord {
+    display: flex;
+    flex-direction: column;
     max-height: 30rem;
     max-width: 30rem;
     border: .25rem solid;
@@ -42,6 +44,7 @@ div h1 span {
 
 .contain1{
     display: flex;
+    flex-direction: column;
     margin-top: 2rem;
     margin-bottom: 5rem;
     padding-top: 2.5rem;
@@ -49,13 +52,15 @@ div h1 span {
 }
 .contain2{
     display: flex;
+    flex-direction: column;
     margin-top: 5rem;
-    margin-left: -2rem;
+    /* margin-left: -2rem; */
     margin-bottom: 5rem;
     padding-bottom: 25rem;
 }
 .contain3{
     display: flex;
+    flex-direction: column;
     margin-top: 5rem;
     margin-bottom: 8rem;
 }
@@ -148,8 +153,13 @@ div h1 span {
 
 @media (max-width:800px) {
     .phone{
-        max-width: 90vw; 
+        max-width: 80vw; 
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: center;
+    }
+    .picBord{
+        max-width: 80vw; 
+        align-items: center;
+        justify-content: center;
     }
 }
