--- a/port.css
+++ b/port.css
@@ -162,4 +162,8 @@ div h1 span {
         align-items: center;
         justify-content: center;
     }
+    .firstP{
+        align-items: center;
+        justify-content: center;
+    }
 }
