--- a/port.css
+++ b/port.css
@@ -153,7 +153,8 @@ div h1 span {
         align-items: center;
         justify-content: center;
     }
-    .firstP{
+    .firstMes{
+        max-width: 90vw; 
         align-items: center;
         justify-content: center;
     }
