update# Please enter the commit message for your changes. Lines starting

--- a/port.css
+++ b/port.css
@@ -122,21 +122,21 @@ div h1 span {
 @media (max-width: 1200px) {
     /* … */
 
-    .test1{
+    /* .test1{
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
+    } */
 
   }
 @media (max-width: 1025px) {
     /* … */
 
-    .test2{
+    /* .test2{
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
+    } */
 
   }
 
