--- a/port.css
+++ b/port.css
@@ -41,17 +41,23 @@ div h1 span {
 }
 
 .contain1{
+    display: flex;
+    flex-direction: column;
     margin-top: 2rem;
     margin-bottom: 5rem;
     padding-top: 2.5rem;
     padding-bottom: 25rem;
 }
 .contain2{
+    display: flex;
+    flex-direction: column;
     margin-top: 5rem;
     margin-bottom: 5rem;
     padding-bottom: 25rem;
 }
 .contain3{
+    display: flex;
+    flex-direction: column;
     margin-top: 5rem;
     margin-bottom: 8rem;
 }
