--- a/port.css
+++ b/port.css
@@ -178,5 +178,7 @@ div h1 span {
         max-width: 90vw; 
         align-items: center;
         justify-content: center;
+        padding: 0px;
+        text-align: center;
     }
 }
