--- a/port.css
+++ b/port.css
@@ -178,7 +178,7 @@ div h1 span {
         max-width: 90vw; 
         align-items: center;
         justify-content: center;
-        padding: 0px;
+        padding: 25rem 0rem 0rem 0rem;
         text-align: center;
     }
 }
