--- a/port.css
+++ b/port.css
@@ -174,7 +174,7 @@ div h1 span {
     .firstMes{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        /* align-items: center; */
         max-width: 90vw; 
         align-items: center;
         justify-content: center;
