--- a/port.css
+++ b/port.css
@@ -174,10 +174,9 @@ div h1 span {
     .firstMes{
         display: flex;
         flex-direction: column;
-        /* align-items: center; */
         max-width: 90vw; 
         align-items: center;
-        justify-content: center;
+        /* justify-content: center; */
         padding: 25rem 0rem 0rem 0rem;
         text-align: center;
     }
