--- a/port.css
+++ b/port.css
@@ -9,6 +9,9 @@ form.form-example {
 }
 
 .makeCenter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     width: 100vw;
 }
