--- a/port.css
+++ b/port.css
@@ -13,7 +13,7 @@ form.form-example {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    max-width: 80vw;
 }
 .firstMes {
     display: flex;
