--- a/port.css
+++ b/port.css
@@ -12,6 +12,7 @@ form.form-example {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 100vw;
 }
 .firstMes {
     display: flex;
