--- a/port.css
+++ b/port.css
@@ -25,6 +25,7 @@ div h1 span {
     color: #7eb3ca;
     opacity: 0.7;
 }
+
 .knowMore {
     display: inline-block;
     position: relative;
@@ -37,6 +38,7 @@ div h1 span {
 .knowMore:hover {
     background-color: #339ac6;
     background-image: none;
+    padding: 0.9rem 1.7rem;
 }
 
 .picBord {
@@ -119,11 +121,27 @@ div h1 span {
     gap: 10px;
     border: none;
     border-radius: 50px;
-    /* background: linear-gradient(270deg, #ff994f, #fa6d86); */
     cursor: pointer;
+    margin: 10px;
+}
+
+.contact button:hover{
+    background-image: linear-gradient(135deg,#7eb3ca,#d6dbff);
+    font-size: 17px;
+    margin: 8px;
+}
+
+.textDec{
+    list-style: none;
+    text-decoration: none;
+}
+
+.textColor{
+    color: whitesmoke;
 }
 
 .contact button a{
+    list-style: none;
     text-decoration: none;
 }
 
